# introducao-python

./: .env.example  .gitignore  README.md  pyproject.toml
exercicios/aula1/: README.md
exercicios/aula2/: README.md
exercicios/aula3/: README.md
notebooks/: aula1_fundamentos.ipynb  aula2_abstracao.ipynb  aula3_organizacao.ipynb  aula4_complexidade.ipynb  tarefas_aula1.ipynb  tarefas_aula2.ipynb  tarefas_aula3.ipynb  tarefas_aula4.ipynb
