[project]
name = "introducao-python"
version = "0.1.0"
description = "Introdução ao Python Computacional — curso de nivelamento (4 aulas)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=11.0.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]
